# ubiquitous-chainsaw

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  copy_headers.py  cppcheck.sh
client/: .clang-format  .suppress.cppcheck  CMakeLists.txt  README.md  child_header_finder.py  client.rc  cppcheck.ps1  cppcheck.sh  hex_dump_to_std_array.py
client/cmake/: child_header_finder.cmake  cppcheck.cmake  dependencies.cmake  imgui.cmake  sdl.cmake  wolfssl.cmake
client/resources/fonts/louis_george_cafe/: font.txt
client/src/: CAuthenticator.cpp  CAuthenticator.hpp  CMakeLists.txt  CReplayProtector.cpp  CReplayProtector.hpp  CRssiDemander.cpp  CRssiDemander.hpp  CServer.cpp  CServer.hpp  client_common.cpp  client_common.hpp  client_defines.hpp  defines.hpp  logger.hpp  main.cpp  resource.hpp  win32.hpp
client/src/bluetoothLE/: CBLEScanner.hpp  CMakeLists.txt  CScannerDEPREC.hpp  Characteristic.hpp  Descriptor.hpp  Device.hpp  IDevice.hpp  Scanner.hpp  Service.hpp  ble_common.hpp  common.hpp  services.hpp
client/src/bluetoothLE/windows/: CCharacteristic.cpp  CCharacteristic.hpp  CDescriptor.cpp  CDescriptor.hpp  CDevice.cpp  CDevice.hpp  CMakeLists.txt  CScanner.cpp  CScanner.hpp  CService.cpp  CService.hpp  SystemAPI.cpp  SystemAPI.h  win_ble_common.hpp
client/src/common/: CCoroutineManager.cpp  CCoroutineManager.hpp  CMakeLists.txt  CMutex.hpp  CScheduler.hpp  CStopWatch.hpp  CThreadSafeHashMap.hpp  CThreadSafeQueue.hpp  client_common.cpp  client_common.hpp
client/src/defense/: CMakeLists.txt  defense_mechanism.hpp  defense_mechanism_win.cpp
client/src/gfx/: CRenderer.cpp  CRenderer.hpp  CWindow.cpp  CWindow.hpp  SDL_Defines.hpp
client/src/gui/: CDeviceList.cpp  CDeviceList.hpp  CGui.cpp  CGui.hpp  CMakeLists.txt  CRSSIPlot.cpp  CRSSIPlot.hpp  CWidget.hpp  font_louis_george.hpp  layout.hpp
client/src/security/: CEccContext.cpp  CEccContext.hpp  CEccKey.cpp  CEccKey.hpp  CHash.hpp  CMakeLists.txt  CRandom.cpp  CRandom.hpp  CWolfCrypt.cpp  CWolfCrypt.hpp  Sha.cpp  Sha.hpp  defines_wc.hpp  ecc_key.cpp  ecc_key.hpp  hash.cpp  hash.hpp  sha.hpp
client/src/system/: CMakeLists.txt  Errors.hpp  SerialCommunication.hpp  System.hpp  TrayIcon.hpp
client/src/system/windows/: CDeviceInfoSet.cpp  CDeviceInfoSet.hpp  CErrorMessage.cpp  CErrorMessage.hpp  CMakeLists.txt  CSerialCommunication.cpp  CSerialCommunication.hpp  CSystem.cpp  CSystem.hpp  CTrayIcon.cpp  CTrayIcon.hpp  System.cpp  System.h
client/test/: CMakeLists.txt  CMakeLists.txt.in  Test_CMutex.cpp  Test_CThreadSafeHashMap.cpp  test_CHash.cpp  test_CRandom.cpp  test_CThreadSafeQueue.cpp  test_EccKey.cpp  test_ReplayProtection.cpp
cmake/: CompilerWarnings.cmake  cppcheck.cmake  dependencies.cmake  imgui.cmake  pch.cmake  sdl.cmake
common/: SharableThis.hpp  ble_services.hpp  common.hpp  defines.hpp  exceptions.hpp  logger.hpp
server/: .clang-format  .suppress.cppcheck  CMakeLists.txt  ConfigureServer.py  README.md  cppcheck.ps1  cppcheck.sh  notes.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
server/cmake/: cppcheck.cmake
server/main/: CAdvertiseFields.cpp  CAdvertiseFields.h  CAuthentication.cpp  CAuthentication.hpp  CChainsaw.cpp  CChainsaw.hpp  CChip.cpp  CChip.hpp  CEventLoop.cpp  CEventLoop.hpp  CGap.cpp  CGap.hpp  CGapService.cpp  CGapService.h  CGapService.hpp  CGatt.cpp  CGatt.hpp  CGattCharacteristic.hpp  CGattDefine.hpp  CGattServer.cpp  CGattServer.h  CGattServer.hpp  CGattService.cpp  CGattService.hpp  CMakeLists.txt  CNimble.cpp  CNimble.h  CNimble.hpp  CNonVolatileStorage.cpp  CNonVolatileStorage.hpp  Nimble.cpp  Nimble.hpp  ServerDefines.hpp  ble_common.hpp  idf_component.yml  main.cpp  server_common.hpp  server_defines.hpp  usb_cdc.cpp  usb_cdc.hpp
server/main/ble/: CConnection.cpp  CConnection.hpp  CGap.cpp  CGap.hpp  CGatt.cpp  CGatt.hpp  CGattCharacteristic.hpp  CNimble.cpp  CNimble.hpp  Nimble.cpp  ble_common.cpp  ble_common.hpp
server/main/ble/profiles/: CGattCharacteristic.hpp  CGattService.cpp  CGattService.hpp  CProfileCache.cpp  CProfileCache.hpp  CProfileCacheBuilder.cpp  CProfileCacheBuilder.hpp  CWhereAmI.cpp  CWhereAmI.hpp  CWhoAmI.cpp  CWhoAmI.hpp  profiles.hpp
server/main/include/: user_settings.h
server/main/sys/: CChip.cpp  CChip.hpp  CEventGroup.cpp  CEventGroup.hpp  CEventLoop.cpp  CNonVolatileStorage.cpp  CNonVolatileStorage.hpp  CSystem.cpp  CSystem.hpp
shared/common/: Pointer.hpp  ble_services.hpp  common.hpp  defines.hpp  exceptions.hpp  logger.hpp  serial_communication.hpp
shared/security/: CEccContext.cpp  CEccContext.hpp  CHash.hpp  CMakeLists.txt  CRandom.cpp  CRandom.hpp  CWolfCrypt.cpp  CWolfCrypt.hpp  aes.hpp  ecc_key.cpp  ecc_key.hpp  sha.cpp  sha.hpp  wc_defines.cpp  wc_defines.hpp
src/: CMakeLists.txt  defines.hpp  exceptions.hpp  main.cpp
src/bluetooth/: CMakeLists.txt  CScanner.cpp  CScanner.hpp
src/bluetoothLE/: CBLEScanner.hpp  CMakeLists.txt  CScannerDEPREC.cpp  common.hpp
src/bluetoothLE/windows/: CScanner.cpp  CScanner.hpp
src/common/: CMakeLists.txt  CScheduler.hpp  CThreadSafeHashMap.hpp  CThreadSafeQueue.hpp
src/gfx/: CMakeLists.txt  CRenderer.cpp  CWindow.cpp  CWindow.hpp
test/: CMakeLists.txt  test.cpp
